# Pose-Estimation

./: README.md  pose_estimation.ipynb  simcc_model_training.ipynb
core/: loss.py
cuda/: .gitignore  CMakeLists.txt  main.cpp  simcc_decoder.cu  utils.cpp
dataset/: dataset.py
loc_utils/: __init__.py  human_detection.py  simcc_label.py
models_lib/: __init__.py  pose_model.py
test_images/: people2.jfif
utils/: simcc_label.py
